site vitrine terminé

--- a/Pages/Contact.html
+++ b/Pages/Contact.html
@@ -54,6 +54,7 @@
 
 <div class="boîte2">
     <article>
+        <p> Telephone : 06 00 00 00</p>
         <p>Lundi : 18h - 20h</p>
         <p>Mardi : 18h - 20h</p>
         <p>Mercredi : 18h - 20h</p>
