--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </ul>
             <div class="buttons">
                 <a href="#" class="action-button pro">Espace pro</a>
-                <a href="#" class="action-button">Se Connecter</a>
+                <a href="./Formulaire/Se connecter.html" class="action-button">Se Connecter</a>
             </div>
             <div class="burger-menu-button">
                 <i class="fa-solid fa-bars"></i>
