lien menu accueil

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a href="#">Tboxing</a>
             </div>
             <ul class="Links">
-                <li><a href="Accueil.html">Accueil</a></li>
+                <li><a href="index.html">Accueil</a></li>
                 <li><a href="./Pages/presentation.html">Présentation</a></li>
                 <li><a href="./Pages/Activites.html">Activités</a></li>
                 <li><a href="./Pages/Contact.html">Contact</a></li>
